--- a/frappe/locale/eo.po
+++ b/frappe/locale/eo.po
@@ -12279,7 +12279,7 @@ msgstr "crwdns129640:0crwdne129640:0"
 #. Description of the 'Enable Password Policy' (Check) field in DocType 'System
 #. Settings'
 #: frappe/core/doctype/system_settings/system_settings.json
-msgid "If enabled, the password strength will be enforced based on the Minimum Password Score value. A value of 2 being medium strong and 4 being very strong."
+msgid "If enabled, the password strength will be enforced based on the Minimum Password Score value. A value of 1 being very weak and 4 being very strong."
 msgstr "crwdns129642:0crwdne129642:0"
 
 #. Description of the 'Bypass Two Factor Auth for users who login from
