--- a/frappe/locale/tr.po
+++ b/frappe/locale/tr.po
@@ -12461,8 +12461,8 @@ msgstr "Etkinleştirildiğinde bildirim, gezinme çubuğunun sağ üst köşesin
 #. Description of the 'Enable Password Policy' (Check) field in DocType 'System
 #. Settings'
 #: frappe/core/doctype/system_settings/system_settings.json
-msgid "If enabled, the password strength will be enforced based on the Minimum Password Score value. A value of 2 being medium strong and 4 being very strong."
-msgstr "Şifre Zorluğu Minimum Şifre Puanı değerine göre zorlanacaktır. 2 değeri orta güçlü ve 4 değeri çok güçlü anlamına gelir."
+msgid "If enabled, the password strength will be enforced based on the Minimum Password Score value. A value of 1 being very weak and 4 being very strong."
+msgstr "Şifre Zorluğu Minimum Şifre Puanı değerine göre zorlanacaktır. 1 değeri çok zayıf ve 4 değeri çok güçlü anlamına gelir."
 
 #. Description of the 'Bypass Two Factor Auth for users who login from
 #. restricted IP Address' (Check) field in DocType 'System Settings'
