--- a/frappe/locale/zh.po
+++ b/frappe/locale/zh.po
@@ -12277,7 +12277,7 @@ msgstr ""
 #. Description of the 'Enable Password Policy' (Check) field in DocType 'System
 #. Settings'
 #: frappe/core/doctype/system_settings/system_settings.json
-msgid "If enabled, the password strength will be enforced based on the Minimum Password Score value. A value of 2 being medium strong and 4 being very strong."
+msgid "If enabled, the password strength will be enforced based on the Minimum Password Score value. A value of 1 being very weak and 4 being very strong."
 msgstr ""
 
 #. Description of the 'Bypass Two Factor Auth for users who login from
